<resources>
    <string name="app_name">Your Pharmacy</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="currency">  IL  </string>
    <string name="welcome">Welcome</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="username_example_com">username@example.com</string>
    <string name="Login">Login</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="have_not_account">You don’t have an account?</string>
    <string name="TODO">TODO</string>
    <string name="choose_type">Please select user type</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="docter">Docter</string>
    <string name="normal_user">Normal User</string>

    <string name="userNameIsRequired">User Name Is Required</string>
    <string name="phoneNumberIsRequired">Phone Number Is Required</string>
    <string name="emailIsRequired">Email Is Required</string>
    <string name="please_enter_valid_email">Please Enter a Valid Email !!!</string>
    <string name="passwordIsRequired">Password Is Required</string>
    <string name="minimumLength">Minimum Length Of Password Should be 8</string>
    <string name="passwordNotSpace">Password must not contain spaces !!!</string>
    <string name="passwordDontMatch">Password don’t match</string>
    <string name="phone_number_is_required">Phone Number Is Required</string>
    <string name="please_select_type">Please Select Type</string>

    <string name="AlreadyRegistered">You Are Already Registered …</string>
    <string name="userNotFound">User Not Found</string>

    <string name="enter_email_address">Enter Email Address</string>
    <string name="recover">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="checkMesg">Check the messages on the e-mail : \n</string>
    <string name="userNotPermission">This user does not have permission</string>

    <string name="email_address">Email Address</string>
    <string name="updatedSuccessfully">Updated Successfully</string>
    <string name="Updatefailed">Update Failed</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="exit">Exit</string>
    <string name="addNewMedicine">Adding a New Medicine</string>
    <string name="choose_type_Medicine">Please Select Type Medicine</string>
    <string name="tablets">Tablets</string>
    <string name="drink">Drink</string>
    <string name="Injection">Injection</string>
    <string name="medicament_name">Name</string>
    <string name="medicament_price">Price</string>
    <string name="medicament_quantity">Quantity</string>
    <string name="Add">Add</string>
    <string name="enter_discount_value">Discount Value</string>
    <string name="NameIsRequired">Name Is Required</string>
    <string name="PriceIsRequired">Price Is Required</string>
    <string name="QuantityIsRequired">Quantity Is Required</string>
    <string name="QRIsRequired">QR Code Is Required</string>
    <string name="DiscountIsRequired">Discount Value Is Required</string>


    <string name="permission_denied">Permission Denied To Camera</string>
    <string name="Added_successfully">Added successfully</string>
    <string name="qr_code">QR Code</string>
    <string name="save">Save</string>
    <string name="PleaseEnterQuestion">Please Enter Question ?</string>
    <string name="PleaseEnterAnswer">Please Enter Answer .</string>
    <string name="docter_profile">Docter Profile</string>
    <string name="user_age">Age</string>
    <string name="user_IDNumber">Identification Number</string>
    <string name="user_address">Address</string>
    <string name="userAddressIsRequired">User Address Is Required</string>
    <string name="IdentificationNumberIsRequired">Identification Number Is Required</string>
    <string name="userAgeIsRequired">User Age Is Required</string>
    <string name="ContactsUS">Contacts US</string>
    <string name="pharmacyPhone">Pharmacy Phone</string>
    <string name="deliveryPhone">Delivery Phone</string>
    <string name="webSite">Website</string>
    <string name="user_age_Limit">The user must be over 18</string>
    <string name="minimumLengthPhone">Minimum Length Of Phone Should be 10</string>


</resources>