<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:layoutDirection="ltr"
    tools:context=".UI.Docter.Add_Medicine_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="10dp"
            android:theme="@style/ToolbarTheme"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/addNewMedicine"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp"
                android:textStyle="italic" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                tools:ignore="MissingConstraints">

                <ProgressBar
                    android:id="@+id/progressCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/cv"
                    app:layout_constraintEnd_toEndOf="@id/cv"
                    app:layout_constraintStart_toStartOf="@id/cv"
                    app:layout_constraintTop_toTopOf="@id/cv"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/choose_type_Medicine"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bt_uidetype"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/tablets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/tablets"
                            android:textAlignment="center"
                            android:textColor="@drawable/text_color" />

                        <RadioButton
                            android:id="@+id/drink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1.5"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/drink"
                            android:textAlignment="center"
                            android:textColor="@drawable/text_color" />

                        <RadioButton
                            android:id="@+id/injection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/Injection"
                            android:textAlignment="center"
                            android:textColor="@drawable/text_color" />
                    </RadioGroup>


                    <ImageView
                        android:id="@+id/medicamentImage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/TODO"
                        android:src="@mipmap/add_image_medicine" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/medicament_name"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/medicamentName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/medicament_price"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_price_check_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/medicamentPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/medicament_quantity"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_production_quantity_limits_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/medicamentQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890"
                            android:inputType="number"

                            tools:ignore="TextContrastCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:padding="5dp"
                        android:background="@drawable/gray_border"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/medicamentQR"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:digits="1234567890"
                            android:gravity="center"
                            android:hint="@string/qr_code"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:textAlignment="center" />

                        <ImageButton
                            android:id="@+id/btnQRCode"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:background="@null"
                            android:contentDescription="@string/TODO"
                            android:gravity="center"
                            android:src="@drawable/ic_baseline_qr_code_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/gray_border"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <EditText
                            android:id="@+id/medicamentDiscount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:gravity="center"
                            android:hint="@string/enter_discount_value"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <Switch
                            android:id="@+id/btnisDiscount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="@null"
                            android:contentDescription="@string/TODO"
                            android:gravity="center"
                            app:showText="true"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/continueAdd"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/bt_uidesign"
                        android:gravity="center"
                        android:text="@string/Add"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>