<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:layoutDirection="ltr"
    tools:context=".UI.Login_Register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:elevation="10dp"
            android:theme="@style/ToolbarTheme"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp"
                android:textStyle="italic" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                tools:ignore="MissingConstraints">

                <ProgressBar
                    android:id="@+id/progressCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/cv"
                    app:layout_constraintEnd_toEndOf="@id/cv"
                    app:layout_constraintStart_toStartOf="@id/cv"
                    app:layout_constraintTop_toTopOf="@id/cv"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/choose_type"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bt_uidetype"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/docter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/docter"
                            android:textAlignment="center"
                            android:textColor="@drawable/text_color" />

                        <RadioButton
                            android:id="@+id/normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/normal_user"
                            android:textAlignment="center"
                            android:textColor="@drawable/text_color" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_name"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/Email"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_password"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="password_toggle"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/confirm_password"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="password_toggle"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_IDNumber"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_contact_page_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userIDNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="9"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_age"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_man_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:hint="@string/phone_number"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_address"
                        app:boxStrokeColor="@color/colorBlue"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/continueRegister"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/bt_uidesign"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>